--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,14 +1,14 @@
 .List {
-  box-shadow: 0 6px 10px rgba(0, 0, 0, .2);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(20px);
-  border: 1px solid rgba(255,255,255,.3);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .ListHeader {
   display: flex;
   align-items: center;
   height: 60px;
-  background-image: linear-gradient(to bottom right, rgba(43, 54, 119, .5), rgba(54, 74, 189, .5));
+  background-color: gren;
   padding: 0 20px;
   color: #ffffff;
 }
@@ -26,14 +26,14 @@
 }
 
 .AddMore {
-  background-color: rgba(42, 57, 144, .5);
+  background-color: rgba(42, 57, 144, 0.5);
   padding: 20px;
   display: flex;
 }
 
 .AddMore input {
   border: none;
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(255, 255, 255, 0.5);
   padding: 7px;
   border-radius: 0;
   flex-grow: 1;
@@ -52,7 +52,7 @@
 }
 
 .AddMore button {
-  background-color: rgba(42, 57, 144, .5);
+  background-color: rgba(42, 57, 144, 0.5);
   color: #ffffff;
   padding: 5px 10px;
   font-weight: 400;
