--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   height: 60px;
-  background-color: gren;
+  background-color: green;
   padding: 0 20px;
   color: #ffffff;
 }
